# CustomerChurn

./: .gitignore  Final_Project_Telco_Churn.ipynb  Final_Project_Telco_Churn_with_supervised.ipynb  README.md  main.py  pyproject.toml  requirements.txt  supervised_learning_section.ipynb
notebooks/: group_L_proposal.ipynb  mission.ipynb
