[project]
name = "dai-mission-group-l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.14",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
